--- a/roadmapplugin/trunk/roadmapplugin/locale/messages.pot
+++ b/roadmapplugin/trunk/roadmapplugin/locale/messages.pot
@@ -1,50 +1,52 @@
-# Translations template for Roadmap-Plugin. 
-# Copyright (C) 2010 ORGANIZATION 
-# This file is distributed under the same license as the 
-# RoadmapPlugin project. 
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2010. 
-# 
-# copied from TracSubTicketsPlugin project, see 
-# http://trac.edgewall.org/attachment/wiki/CookBook/PluginL10N/trac-subtickets-plugin_i18n-l10n.patch
-#, fuzzy 
-msgid "" 
-msgstr "" 
-"Project-Id-Version: RoadmapPlugin 0.0.x\n" 
-"POT-Creation-Date: 2011-03-10 01:38+0200\n" 
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n" 
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n" 
-"Language-Team: LANGUAGE <trac-dev@googlegroups.com>\n" 
-"MIME-Version: 1.0\n" 
-"Content-Type: text/plain; charset=utf-8\n" 
-"Content-Transfer-Encoding: 8bit\n" 
-"Generated-By: Babel 1.0dev-r482\n"
-
-msgid "Sort descending"
+# Translations template for Roadmap Plugin.
+# Copyright (C) 2024 ORGANIZATION
+# This file is distributed under the same license as the Roadmap Plugin
+# project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+#
+#, fuzzy
+msgid ""
 msgstr ""
+"Project-Id-Version: Roadmap Plugin 0.4.3\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2024-04-08 07:49+0900\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.14.0\n"
 
-msgid "Show milestone descriptions"
-msgstr ""
-
+#: roadmapplugin/roadmap.py:103
 msgid "Descending"
 msgstr ""
 
+#: roadmapplugin/roadmap.py:103
 msgid "Ascending"
 msgstr ""
 
-msgid "Due"
-msgstr ""
-
+#: roadmapplugin/roadmap.py:104
 msgid "Name"
 msgstr ""
 
-msgid "Filter: "
+#: roadmapplugin/roadmap.py:104
+msgid "Due"
 msgstr ""
 
+#: roadmapplugin/roadmap.py:159
 msgid "Sort by: "
 msgstr ""
 
+#: roadmapplugin/roadmap.py:173
 msgid "available prefixes: contains: ~, starts with: ^, ends with: $"
 msgstr ""
 
+#: roadmapplugin/roadmap.py:195
+msgid "Show milestone descriptions"
+msgstr ""
 
+#: roadmapplugin/roadmap.py:198
+msgid "Filter: "
+msgstr ""
 
